Dat bug fixes (#1213)
* bug fix - view mate in splitscreen - multiple scrollbars

* multi-locus locus label - increased vertical separation from ruler

Former-commit-id: a59fd64239fd06b862bd1df2d244cd60696c4ca2

--- a/css/igv.scss
+++ b/css/igv.scss
@@ -862,7 +862,7 @@ $igv-multi-locus-gap-width: 2 * ($igv-multi-locus-gap-margin-width) + $igv-multi
   position: absolute;
 
   left:50%;
-  top:25%;
+  top:15%;
   transform: translate(-50%, -25%);
 
   font-family: $igv-default-font-face;
